# appstore

./: .gitignore  LICENSE  README.md  app.py  config.toml.example  fetch_level_history.py  fetch_main_dashboard.py  maintenance.sh  messages.pot  pyproject.toml  requirements.txt  utils.py
appstore/: app.py  config.py  fetch_main_dashboard.py  stars.py  utils.py
assets/: .gitignore  fetch_assets  tailwind-local.css
assets/badges/: fetch_badges
data/: .gitkeep
src/appstore/: __init__.py  app.py  config.py  fetch_level_history.py  fetch_main_dashboard.py  stars.py  utils.py  wishlist_ratelimit.py
templates/: app.html  base.html  catalog.html  dash.html  index.html  wishlist.html  wishlist_add.html
tools/: fetch_assets  fetch_badges  maintenance.sh
translations/: messages.mo  messages.pot
translations/ar/LC_MESSAGES/: messages.mo  messages.po
translations/bn_BD/LC_MESSAGES/: messages.mo  messages.po
translations/br/LC_MESSAGES/: messages.mo  messages.po
translations/ca/LC_MESSAGES/: messages.mo  messages.po
translations/ckb/LC_MESSAGES/: messages.mo  messages.po
translations/cs/LC_MESSAGES/: messages.mo  messages.po
translations/da/LC_MESSAGES/: messages.mo  messages.po
translations/de/LC_MESSAGES/: messages.mo  messages.po
translations/el/LC_MESSAGES/: messages.mo  messages.po
translations/eo/LC_MESSAGES/: messages.mo  messages.po
translations/es/LC_MESSAGES/: messages.mo  messages.po
translations/eu/LC_MESSAGES/: messages.mo  messages.po
translations/fa/LC_MESSAGES/: messages.mo  messages.po
translations/fi/LC_MESSAGES/: messages.mo  messages.po
translations/fr/LC_MESSAGES/: messages.mo  messages.po
translations/gl/LC_MESSAGES/: messages.mo  messages.po
translations/he/LC_MESSAGES/: messages.mo  messages.po
translations/hi/LC_MESSAGES/: messages.mo  messages.po
translations/hu/LC_MESSAGES/: messages.mo  messages.po
translations/id/LC_MESSAGES/: messages.mo  messages.po
translations/it/LC_MESSAGES/: messages.mo  messages.po
translations/ja/LC_MESSAGES/: messages.mo  messages.po
translations/kab/LC_MESSAGES/: messages.mo  messages.po
translations/ko/LC_MESSAGES/: messages.mo  messages.po
translations/lt/LC_MESSAGES/: messages.mo  messages.po
translations/mk/LC_MESSAGES/: messages.mo  messages.po
translations/nb_NO/LC_MESSAGES/: messages.mo  messages.po
translations/ne/LC_MESSAGES/: messages.mo  messages.po
translations/nl/LC_MESSAGES/: messages.mo  messages.po
translations/nn/LC_MESSAGES/: messages.mo  messages.po
translations/oc/LC_MESSAGES/: messages.mo  messages.po
translations/pl/LC_MESSAGES/: messages.mo  messages.po
translations/pt/LC_MESSAGES/: messages.mo  messages.po
translations/pt_BR/LC_MESSAGES/: messages.mo  messages.po
translations/ru/LC_MESSAGES/: messages.mo  messages.po
translations/sk/LC_MESSAGES/: messages.mo  messages.po
translations/sl/LC_MESSAGES/: messages.mo  messages.po
translations/sv/LC_MESSAGES/: messages.mo  messages.po
translations/ta/LC_MESSAGES/: messages.mo  messages.po
translations/te/LC_MESSAGES/: messages.mo  messages.po
translations/tr/LC_MESSAGES/: messages.mo  messages.po
(+6 files in other folders)
